static/style.css
* {
	margin:0;
	padding:0;
	image-rendering: auto;
	-ms-interpolation-mode: bicubic;
}

html
{
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}

body
{
	font-family: Sans-Serif;
	font-size: 80%;
	/*background: #F0F0F0 url(/background.png) repeat-x;*/
	background: #F0F0F0 url(/brushed.png) repeat;
	width: 100%;
	height: 95%;
	margin: 0;
	padding: 0;
}

a:link, a:visited
{
	text-decoration: none;
	color: #550AAA;
}

a:hover
{
	text-decoration: underline;
}

h1 a:link
{
	color: #000000;
}

h1 a:visited
{
	color: #000000;
}

h1 a:hover
{
	text-decoration: underline;
}

iframe
{
	display: block;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	border: 0;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

div
{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

img
{
	margin: 0;
	padding: 0;
	border: 0;
	vertical-align: middle;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

p
{
	margin: 0.5em;
}

form
{
	display: inline;	
}

hr 
{
	clear: both;
}

h1
{
	margin: 0.5em;
	padding: 0;
	font-size: 1.3em;
	font-weight: bold;
}

h2
{
	margin: 0.25em;
	padding: 0;
	margin-bottom: 0.5em;
	font-size: 1.2em;
	font-weight: bold;
}

h3
{
	margin: 0.25em;
	padding: 0;
        margin-bottom: 0.5em;
	font-size: 1.1em;
	font-weight: bold;
}

table 
{
	width: 100%;
	margin: 0em;
	padding: 0em;
	border: 0; 
	border-collapse: collapse;
	border-style: none;
	border-width:0
}

tr
{
	margin: 0;
	border: 0;
	padding: 0;
	border-width:0;
}

td
{
	margin: 0;
	border: 0;
	padding-top: 0.1em;
	padding-bottom: 0.1em;
	padding-left: 0.2em;
	padding-right: 0.2em;
	border-width:0;
	text-align: left;
}

fieldset 
{
	margin: 0em;
	margin-top: 2em;
	margin-bottom: 0.5em;
	padding: 0.5em;
	padding-top: 1.5em;
	padding-left: 1em;
	padding-right: 1em;
	background-color: #FFFFFF;
	border: 2px solid #E0E0E0;
	border-radius: 4px;
	box-shadow: 0px 0px 8px 2px #404040;
}

label 
{
	float: left;
	clear: both;
	width: 20%;
	margin-right: 0.5em;
	padding-top: 0.4em;
	text-align: right;
	font-weight: bold;
}

legend 
{
	position: absolute;
	padding: 0.2em 0.5em;
	margin-top: -2.5em;
	text-align: right;
	background-color: #FFFFFF;
	border: 2px solid #E0E0E0;
	border-radius: 4px;
	box-shadow: 0px 0px 8px 2px #404040;
}

input
{
	display: inline-block;
	margin: 0.2em;
	padding: 0.4em;
	line-height: 1.4em;
	color: #000000;
	border: 1px solid #606060;
	border-radius: 4px;
	font-family: inherit;
	font-size: inherit;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

input[type="submit"]
{
	min-width: 6em;
	padding: 0.4em;
	border-radius: 4px;
	cursor: pointer;
	color: #000000;
	background-color: #FFDC0A;
	border: 1px solid #E0BC00;
	text-align: center;
}

input[type="submit"]:hover
{
	background-color: #FFF040;
}

input[type="button"]
{
	min-width: 6em;
	padding: 0.4em;
	border-radius: 4px;
	cursor: pointer;
	color: #000000;
	background-color: #FFDC0A;
	border: 1px solid #E0BC00;
	text-align: center;
}

input[type="button"]:hover
{
	background-color: #FFF040;
}

input[type="text"]
{
	color: #000000;
        background-color: #FFFFFF;
}

input[type="password"]
{
	color: #000000;
        background-color: #FFFFFF;
}

select
{
	display: inline-block;
	margin: 0.2em;
	padding: 0.2em;
	padding-right: 1em;
}

textarea
{
	display: block;
	resize: none;
	overflow: auto;
	padding: 0.5em;
	border: 1px solid #000000;
        border-radius: 4px;
	color: #000000;
	background-color: #FFFFFF;
	font-family: inherit;
	font-size: inherit;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
}

.button
{
        display: inline-block;
	min-width: 4em;
        margin: 0.2em;
        margin-bottom: 0.5em;
        padding: 0.4em;
	line-height: 1.4em;
        color: #000000;
        background-color: #B0B0B0;
	border: 1px solid #A0A0A0;
	border-radius: 4px;
	text-align: center;
}

a.button
{
        color: #000000;
        cursor: pointer;
        background-color: #FFDC0A;
        border: 1px solid #E0BC00;
}

a.button:hover
{
	background-color: #FFF040;
	text-decoration: none;
}

.banner
{
	display: block;
	top: 0;
	width: 100%;
	margin: 0;
	padding: 0.5em;
	background: #FCFCFC;
	border-bottom: 1px solid #A0A0A0;
	text-align: center;
}

.loading > body > * 
{
    display: none;
}

.loading body
{
    background: #F0F0F0;
}

.animloading body 
{
    background: #F0F0F0 url(/loading.png) no-repeat 50% 40%;
}

#page
{
	width: 100%;
	height: 100%;
	max-width: 70em;
	margin-top: 0;
	margin-bottom: 0.5em;
	margin-left: auto;
	margin-right: auto;
	padding: 0;
}

#header
{
	width: 100%;
	text-align: left;
	margin-bottom: 1em;
}

#mainheader
{
	width: 100%;
	text-align: center;
	margin-top: 1em;
	margin-bottom: 2em;
}

#header div
{
	display: inline-block;
}

#title
{
	margin: 0.5em;
	margin-top: 1em;
	font-weight: bold;
	font-size: 1.6em;
	max-width: 66%;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

#wrapper
{
	display: table;
	width: 100%;
	height: 100%;
	min-height: 100%;
}

#leftcolumn
{
	display: table-cell;
	vertical-align: top;
	width: 38%;
	height: 100%;
	margin: 0;
	padding: 1em;
	background : transparent;
	border: none;
	box-shadow: none;
}

#rightcolumn
{
	display: table-cell;
	vertical-align: top;
	width: 62%;
	height: 100%;
	min-height: 50em;
	margin: 0;
	padding: 1em;
	padding-right: 2em;
}

#leftpage
{
	width: 80%;
	height: 100%;
	margin-top: 0;
	margin-bottom: 0.5em;
	margin-left: auto;
	margin-right: auto;
	padding: 0;
}

#rightcolumn iframe
{
	display: inline-block;
	max-width: 72em;
}

#header .button
{
	float: right;
}

#content
{
	clear: both;
	width: 100%;
	height: 20em;
}

#topmenu
{
	min-height: 2em;
	margin: 0.25em;
	text-align: left;
}

#footer
{
	width: 100%;
	margin-bottom: 1em;
	font-size: 0.8em;
	text-align: center;
	background-color: rgba(24,24,24,0);
}

#logo
{
	width: 128px;
}

#logo img
{
	width: 128px;
}

#header #logo
{
	float: left;
	margin: 0.25em;
	width: 64px;
}

#header #logo img
{
	width: 64px;
}
/* ... */

